TM-15961 Fix overflow issue on notes table

--- a/src/main/webapp/tds/web-app/css/elements/component/task-detail-component.scss
+++ b/src/main/webapp/tds/web-app/css/elements/component/task-detail-component.scss
@@ -3,7 +3,7 @@
 .task-detail-component {
 
   .modal-body {
-    min-height: 80%;
+    height: 80%;
 
     .full-height {
       padding-left: 24px;
